CSS UPDATE JULY 2023

--- a/recipes/burger.html
+++ b/recipes/burger.html
@@ -4,6 +4,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Sweet Shallot Burger with Bacon</title>
+<link rel="stylesheet" href="../styles.css">
 </head>
 <body>
     <h1>Sweet Shallot Burger with Bacon</h1>
@@ -28,6 +29,8 @@
       <li>Toast buns, top with mayo or aeoli, bacon & shallots. </li>
     </ol>
     <p><i>Enjoy!</i></p>
-<a href="../index.html"><i>Back to recipes...</i></a>
 </body>
+<footer>
+  <a class="backbutton" href="../index.html">Back to recipes...</a>
+</footer>
 </html>
