--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Lasagna</title>
+    <link rel="stylesheet" href="../styles.css">
   </head>
 
   <body>
@@ -29,7 +30,8 @@
       <li>Cool and serve with parsley and parmesan.</li>
     </ol>
 <p><i>Enjoy!</i></p>
-<a href="../index.html">Back to recipes...</a>
-
   </body>
+  <footer>
+    <a class="backbutton" href="../index.html">Back to recipes...</a>
+  </footer>
 </html>
