--- a/recipes/pasta.html
+++ b/recipes/pasta.html
@@ -3,6 +3,7 @@
     <head>
       <meta charset="UTF-8">
       <title>Pepper Pesto Parmesan Pasta</title>
+      <link rel="stylesheet" href="../styles.css">
     </head>
     <body>
     <h1>Pepper Pesto Parmesan Pasta</h1>
@@ -21,6 +22,8 @@
       <li>Top with parmesan cheese and crushed red pepper</li>
     </ol>
     <p><i>Enjoy!</i></p>
-    <a href="../index.html">Back to recipes...</a>
     </body>
+    <footer>
+      <a class="backbutton" href="../index.html">Back to recipes...</a>
+    </footer>
 </html>
