--- a/index.html
+++ b/index.html
@@ -2,14 +2,20 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Odin Recipes</title>
+        <title>Recipes</title>
+        <link rel="stylesheet" href=".//styles.css">
     </head>
     <body>
-        <h1>Odin Recipes</h1>
-        <ul>
-          <li><a href="recipes/lasagna.html">Artichoke French Lasagna</a></li>
-          <li><a href="recipes/pasta.html">Pepper Pesto Parm Pasta</a></li>
-          <li><a href="recipes/burger.html">Sweet Shallot Burger with Bacon</a> </li>
+        <h1 id="header">"Cursebreaker Cookbook"</h1>
+        <ul class="parent"><h2>Recipes</h2>
+          <li class="child"><a href="recipes/lasagna.html">Artichoke French Lasagna</a></li>
+          <li class="child"><a href="recipes/pasta.html">Pepper Pesto Parm Pasta</a></li>
+          <li class="child"><a href="recipes/burger.html">Sweet Shallot Burger with Bacon</a> </li>
         </ul>
     </body>
-  
+    <footer>
+        <h3>Cursebreakers, USA, 2023</h3>
+        <p class="footnote">Special thanks to <a class="toplink" href="https://www.theodinproject.com/">The Odin Project</a> for outlining this exercise.</p>
+    </footer>
+
+    </html>
