CSS added, HTML streamlined

--- a/recipes/burger.html
+++ b/recipes/burger.html
@@ -7,28 +7,28 @@
 <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
+  <div class="book">
     <h1>Sweet Shallot Burger with Bacon</h1>
     <img src="../images/shallot-burger.jpg" alt="burger with shallots, lettuce, and bacon" width="250">
-    <h2>Ingredients</h2>
-    <ul>
-      <li>Ground Beef</li>
-      <li>Italian Dressing</li>
-      <li>Worcestershire Sauce</li>
-      <li>Bread Crumbs</li>
-      <li>Bacon</li>
-      <li>Shallot</li>
-      <li>Smoked Gouda</li>
-      <li>Buns & lettuce <i>(or preferred burger toppings)</i></li>
+    <ul class="parent"><h2>Ingredients</h2>
+      <li class="child">Ground Beef</li>
+      <li class="child">Italian Dressing</li>
+      <li class="child">Worcestershire Sauce</li>
+      <li class="child">Bread Crumbs</li>
+      <li class="child">Bacon</li>
+      <li class="child">Shallot</li>
+      <li class="child">Smoked Gouda</li>
+      <li class="child">Buns & lettuce <i>(or preferred burger toppings)</i></li>
     </ul>
-    <h2>Steps</h2>
-    <ol>
-      <li>Combine italian dressing, beef, bread crumbs and worcestershire in bowl.</li> 
-      <li>Press patties & chill in fridge. <i>(at least 30min)</i></li>
-      <li>Chop and carmelize shallots. Add bacon. <i>(cook/simmer low and slow)</i></li>
-      <li>Grill/fry burger and top with smoked gouda.</li>
-      <li>Toast buns, top with mayo or aeoli, bacon & shallots. </li>
+    <ol class="parent"><h2>Steps</h2>
+      <li class="child">Combine italian dressing, beef, bread crumbs and worcestershire in bowl.</li> 
+      <li class="child">Press patties & chill in fridge. <i>(at least 30min)</i></li>
+      <li class="child">Chop and carmelize shallots. Add bacon. <i>(cook/simmer low and slow)</i></li>
+      <li class="child">Grill/fry burger and top with smoked gouda.</li>
+      <li class="child">Toast buns, top with mayo or aeoli, bacon & shallots. </li>
     </ol>
     <p><i>Enjoy!</i></p>
+  </div>  
 </body>
 <footer>
   <a class="backbutton" href="../index.html">Back to recipes...</a>
