--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,30 +7,30 @@
   </head>
 
   <body>
-    <h1>Artichoke French Lasagna</h1>
-    <img src="../images/lasagna.jpg" width="250" alt="Spinach, Chicken, Artichoke French Lasagna with feta, mozzarella and provelone cheeses">
-    <h2>Ingredients</h2>
-    <ul>
-      <li>Heavy Whipping Cream</li>
-      <li>Red Sauce</li>
-      <li>Vodka</li>
-      <li>Lasagna Noodles</li>
-      <li>Grilled Chicken</li>
-      <li>Artichoke Hearts</li>
-      <li>Spinach</li>
-      <li>Feta, Mozzarella & Provelone Cheese</li>
-      <li>Fresh Chopped Parsley & Parmesan Cheese</li>
-    </ul>
-    <h2>Steps</h2>
-    <ol>
-      <li>Par-boil pasta, grill chicken, and saute artichoke hearts.</li>
-      <li>Add sauce to saute. Mix in vodka, cream and feta.</li>
-      <li>Layer all ingredients, top with provelone and mozzarella. 
-      <li>Bake for 45min at 350 degrees.</li>
-      <li>Cool and serve with parsley and parmesan.</li>
-    </ol>
-<p><i>Enjoy!</i></p>
-  </body>
+    <div class="book">
+      <h1>Artichoke French Lasagna</h1>
+      <img src="../images/lasagna.jpg" width="250" alt="Spinach, Chicken, Artichoke French Lasagna with feta, mozzarella and provelone cheeses">
+      <ul class="parent"><h2>Ingredients</h2>
+        <li class="child">Heavy Whipping Cream</li>
+        <li class="child">Red Sauce</li>
+        <li class="child">Vodka</li>
+        <li class="child">Lasagna Noodles</li>
+        <li class="child">Grilled Chicken</li>
+        <li class="child">Artichoke Hearts</li>
+        <li class="child">Spinach</li>
+        <li class="child">Feta, Mozzarella & Provelone Cheese</li>
+        <li class="child">Fresh Chopped Parsley & Parmesan Cheese</li>
+      </ul>
+      <ol class="parent"><h2>Steps</h2>
+        <li class="child">Par-boil pasta, grill chicken, and saute artichoke hearts.</li>
+        <li class="child">Add sauce to saute. Mix in vodka, cream and feta.</li>
+        <li class="child">Layer all ingredients, top with provelone and mozzarella. 
+        <li class="child">Bake for 45min at 350 degrees.</li>
+        <li class="child">Cool and serve with parsley and parmesan.</li>
+      </ol>
+      <p class="enjoy"><i>Enjoy!</i></p>
+    </div> 
+x </body>
   <footer>
     <a class="backbutton" href="../index.html">Back to recipes...</a>
   </footer>
