--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
     </head>
     <body>
         <h1 id="header">"Cursebreaker Cookbook"</h1>
+        <div class="book">
         <ul class="parent"><h2>Recipes</h2>
-          <li class="child"><a href="recipes/lasagna.html">Artichoke French Lasagna</a></li>
-          <li class="child"><a href="recipes/pasta.html">Pepper Pesto Parm Pasta</a></li>
-          <li class="child"><a href="recipes/burger.html">Sweet Shallot Burger with Bacon</a> </li>
+          <li class="child"><a href="recipes/lasagna.html" class="link">Artichoke French Lasagna</a></li>
+          <li class="child"><a href="recipes/pasta.html" class="link">Pepper Pesto Parm Pasta</a></li>
+          <li class="child"><a href="recipes/burger.html" class="link">Sweet Shallot Burger with Bacon</a></li>
         </ul>
+        </div>
     </body>
     <footer>
         <h3>Cursebreakers, USA, 2023</h3>
