--- a/recipes/pasta.html
+++ b/recipes/pasta.html
@@ -6,22 +6,22 @@
       <link rel="stylesheet" href="../styles.css">
     </head>
     <body>
-    <h1>Pepper Pesto Parmesan Pasta</h1>
-    <img src="../images/pepper-pesto-parm-pasta.jpg" alt="penne with pesto, crushed red pepper and shredded parmesean cheese" width="250">
-    <h2>Ingredients</h2>
-    <ul>
-      <li>Penne <i>(or pasta of your choice)</i></li>
-      <li>Pesto</li>
-      <li>Olive Oil</li>
-      <li>Crushed Red Pepper & Parmesan Cheese</li>
-    </ul>
-    <h2>Steps</h2>
-    <ol>
-      <li>Boil & drain pasta</li>
-      <li>Re-add pasta to pot/pan and mix in olive oil and pesto</li>
-      <li>Top with parmesan cheese and crushed red pepper</li>
-    </ol>
-    <p><i>Enjoy!</i></p>
+      <div class="book">
+        <h1>Pepper Pesto Parmesan Pasta</h1>
+        <img src="../images/pepper-pesto-parm-pasta.jpg" alt="penne with pesto, crushed red pepper and shredded parmesean cheese" width="250">
+        <ul class="parent"><h2>Ingredients</h2>
+          <li class="child">Penne <i>(or pasta of your choice)</i></li>
+          <li class="child">Pesto</li>
+          <li class="child">Olive Oil</li>
+          <li class="child">Crushed Red Pepper & Parmesan Cheese</li>
+        </ul>
+          <ol class="parent"><h2>Steps</h2>
+            <li class="child">Boil & drain pasta</li>
+            <li class="child">Re-add pasta to pot/pan and mix in olive oil and pesto</li>
+            <li class="child">Top with parmesan cheese and crushed red pepper</li>
+        </ol>
+      </div>
+        <p><i>Enjoy!</i></p>
     </body>
     <footer>
       <a class="backbutton" href="../index.html">Back to recipes...</a>
