--- a/recipes/burger.html
+++ b/recipes/burger.html
@@ -29,8 +29,8 @@
     </ol>
     <p><i>Enjoy!</i></p>
   </div>  
-</body>
 <footer>
-  <a class="backbutton" href="../index.html">Back to recipes...</a>
+  <a class="backbutton" href="../index.html"><h3>Back to recipes...</h3></a>
 </footer>
+</body>
 </html>
