--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -2,13 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Lasagna</title>
+    <title>Vodka-French Lasagna</title>
     <link rel="stylesheet" href="../styles.css">
   </head>
 
   <body>
     <div class="book">
-      <h1>Artichoke French Lasagna</h1>
+      <h1>Vodka-French Lasagna</h1>
       <img src="../images/lasagna.jpg" width="250" alt="Spinach, Chicken, Artichoke French Lasagna with feta, mozzarella and provelone cheeses">
       <ul class="parent"><h2>Ingredients</h2>
         <li class="child">Heavy Whipping Cream</li>
@@ -30,8 +30,8 @@
       </ol>
       <p class="enjoy"><i>Enjoy!</i></p>
     </div> 
-x </body>
   <footer>
-    <a class="backbutton" href="../index.html">Back to recipes...</a>
+    <a class="backbutton" href="../index.html"><h3>Back to recipes...</h3></a>
   </footer>
+  </body>
 </html>
