--- a/recipes/pasta.html
+++ b/recipes/pasta.html
@@ -20,10 +20,10 @@
             <li class="child">Re-add pasta to pot/pan and mix in olive oil and pesto</li>
             <li class="child">Top with parmesan cheese and crushed red pepper</li>
         </ol>
-      </div>
-        <p><i>Enjoy!</i></p>
-    </body>
-    <footer>
-      <a class="backbutton" href="../index.html">Back to recipes...</a>
-    </footer>
+        <p><i>Enjoy!</i></p>   
+      </div> 
+  <footer>
+    <a class="backbutton" href="../index.html"><h3>Back to recipes...</h3></a>
+  </footer>
+</body>
 </html>
