--- a/burger.html
+++ b/burger.html
@@ -4,12 +4,13 @@
 <head>
 <meta charset="UTF-8">
 <title>Sweet Shallot Burger with Bacon</title>
-<link rel="stylesheet" href="../styles.css">
+<link rel="stylesheet" href="./res/styles.css">
 </head>
 <body>
   <div class="book">
+    <a class="backbutton" href="./index.html"><h3>Back to recipes...</h3></a>
     <h1>Sweet Shallot Burger with Bacon</h1>
-    <img src="../images/shallot-burger.jpg" alt="burger with shallots, lettuce, and bacon" width="250">
+    <img src="./res/img/shallot-burger.jpg" alt="burger with shallots, lettuce, and bacon" width="250">
     <ul class="parent"><h2>Ingredients</h2>
       <li class="child">Ground Beef</li>
       <li class="child">Italian Dressing</li>
@@ -29,8 +30,5 @@
     </ol>
     <p><i>Enjoy!</i></p>
   </div>  
-<footer>
-  <a class="backbutton" href="../index.html"><h3>Back to recipes...</h3></a>
-</footer>
 </body>
 </html>
