--- a/index.html
+++ b/index.html
@@ -3,21 +3,17 @@
     <head>
         <meta charset="UTF-8">
         <title>Recipes</title>
-        <link rel="stylesheet" href=".//styles.css">
+        <link rel="stylesheet" href="./res/styles.css">
     </head>
     <body>
+        <a class="link" href="https://cursebreakers.net/portfolio"><h4>Back to portfolio...</h4></a>
         <h1 id="header">"Cursebreaker Cookbook"</h1>
         <div class="book">
         <ul class="parent"><h2>Recipes</h2>
-          <li class="child"><a href="recipes/lasagna.html" class="link">Vodka-French Lasagna</a></li>
-          <li class="child"><a href="recipes/pasta.html" class="link">Pepper Pesto Parm Pasta</a></li>
-          <li class="child"><a href="recipes/burger.html" class="link">Sweet Shallot Burger with Bacon</a></li>
+          <li class="child"><a href="./lasagna.html" class="link">Vodka-French Lasagna</a></li>
+          <li class="child"><a href="./pasta.html" class="link">Pepper Pesto Parm Pasta</a></li>
+          <li class="child"><a href="./burger.html" class="link">Sweet Shallot Burger with Bacon</a></li>
         </ul>
         </div>
     </body>
-    <footer>
-        <h3>Cursebreakers, USA, 2023</h3>
-        <p class="footnote">Special thanks to <a class="toplink" href="https://www.theodinproject.com/">The Odin Project</a> for outlining this exercise.</p>
-    </footer>
-
-    </html>
+</html>
