--- a/pasta.html
+++ b/pasta.html
@@ -3,12 +3,13 @@
     <head>
       <meta charset="UTF-8">
       <title>Pepper Pesto Parmesan Pasta</title>
-      <link rel="stylesheet" href="../styles.css">
+      <link rel="stylesheet" href="./res/styles.css">
     </head>
     <body>
       <div class="book">
+        <a class="backbutton" href="./index.html"><h3>Back to recipes...</h3></a>
         <h1>Pepper Pesto Parmesan Pasta</h1>
-        <img src="../images/pepper-pesto-parm-pasta.jpg" alt="penne with pesto, crushed red pepper and shredded parmesean cheese" width="250">
+        <img src="./res/img/pepper-pesto-parm-pasta.jpg" alt="penne with pesto, crushed red pepper and shredded parmesean cheese" width="250">
         <ul class="parent"><h2>Ingredients</h2>
           <li class="child">Penne <i>(or pasta of your choice)</i></li>
           <li class="child">Pesto</li>
@@ -23,7 +24,6 @@
         <p><i>Enjoy!</i></p>   
       </div> 
   <footer>
-    <a class="backbutton" href="../index.html"><h3>Back to recipes...</h3></a>
   </footer>
 </body>
 </html>
