--- a/lasagna.html
+++ b/lasagna.html
@@ -3,13 +3,14 @@
   <head>
     <meta charset="UTF-8">
     <title>Vodka-French Lasagna</title>
-    <link rel="stylesheet" href="../styles.css">
+    <link rel="stylesheet" href="./res/styles.css">
   </head>
 
   <body>
     <div class="book">
+      <a class="backbutton" href="./index.html"><h3>Back to recipes...</h3></a>
       <h1>Vodka-French Lasagna</h1>
-      <img src="../images/lasagna.jpg" width="250" alt="Spinach, Chicken, Artichoke French Lasagna with feta, mozzarella and provelone cheeses">
+      <img src="./res/img/lasagna.jpg" width="250" alt="Spinach, Chicken, Artichoke French Lasagna with feta, mozzarella and provelone cheeses">
       <ul class="parent"><h2>Ingredients</h2>
         <li class="child">Heavy Whipping Cream</li>
         <li class="child">Red Sauce</li>
@@ -30,8 +31,5 @@
       </ol>
       <p class="enjoy"><i>Enjoy!</i></p>
     </div> 
-  <footer>
-    <a class="backbutton" href="../index.html"><h3>Back to recipes...</h3></a>
-  </footer>
   </body>
 </html>
